# vrame-product

./: .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  package.json  readMe.md  requirements.txt
app/: __init__.py  error.py  main.py  oauth2.py  pyproject.toml  python-poetry.py
app/alembic/versions/: 58e4d6d43584_.py
app/common/: config.py
app/crud/: __init__.py  base.py  users.py
app/db/: db.py  models.py
app/routers/: __init__.py  auth.py  posts.py  test.py  users.py
app/schemas/: auth.py  base.py  posts.py  users.py
app/utils/: auth.py
frontend/: .eslintrc.cjs  Dockerfile  README.md  env.d.ts  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/cypress/support/: component.ts
frontend/src/: App.vue  global.d.ts  main.ts
frontend/src/__test__/views/: login.spec.ts
frontend/src/api/: api.ts  error.ts  instance.ts  utils.ts
frontend/src/api/schema/: request.ts  response.ts
frontend/src/api/service/: auth.ts  join.ts  management.ts  nlp.ts  payment.ts  (+1 more)
frontend/src/i18n/: index.ts
frontend/src/locales/: en.ts  ja.ts  ko.ts
frontend/src/plugins/: i18n.ts  pinia.ts  vrame.ts
frontend/src/router/: index.ts
frontend/src/stores/: useAppStore.ts  useUserStore.ts
frontend/src/styles/: _breakpoints.scss  _colors.scss  _text.scss  _transition.scss  main.scss
frontend/src/types/: index.ts  user.ts
frontend/src/utils/: asyncDebounce.ts  checker.ts  colors.ts  common.ts  components.ts  cookie.ts  date.ts  rules.ts  vrame-utils.ts
frontend/src/views/: index.vue  login.vue  signup.vue
nginx/: default.conf
(+20 files in other folders)
